--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li>4. Reduce ocean plastic quantities quickly and efficiently</li>
             <li>5. Reduce emission usage in pollution prevention schemes</li>
         </ol>
-        <img class="info_img" src="design_system_comparison.png" alt="" srcset="">
+        <img class="info_img" src="Digital drawing Marine Tech.png" alt="" srcset="">
     </section>
 
     <section class="partner" id="partner"> 
