--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         <p>Developers of the worlds first, offshore floating solar farm, Oceans of Energy revolutionised the field of renewable energy. Using their advanced technology and applying it to our project will provide a unique way of mitigating oceanic plastic pollution.</p>
         <h2>SEABIN PROJECT:</h2>
         <p>This wonderful invention has removed more than 1 million kg of plastic from harbours and ports worldwide. By sitting just below surface level of the water, and using pumps to remove the water, the Sea Bin can run continuously, allowing constant removal to occur.</p>
+        <img class="info_img" src="Comparison.png" alt="" srcset="">
+        <img class="info_img" src="Infographic.jpg" alt="" max-height="50%">
     </section>
 
     <div class="sidebar"></div>
