Fixed Images rendering and add new images
Moved app.js script to the bottom of Html, fixed images not rendering after laded page.
Add 2 new images on the slide show.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>Marine Tech Hackathon Landing Page</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
-  <script src="app.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="description" content="Marine Tech Hackathon">
@@ -53,31 +52,43 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-                <div class="numbertext">1 / 5</div>
+                <div class="numbertext">1 / 7</div>
+                <img src="Img_Marine tech render.png" style="width:100%">
+                <div class="text">Top View</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 7</div>
+                <img src="Img_Marine tech render 2.png" style="width:100%">
+                <div class="text">Docking Boat</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 7</div>
                 <img src="Img_Bin.png" style="width:100%">
                 <div class="text">Bin</div>
             </div>
   
             <div class="mySlides fade">
-                <div class="numbertext">2 / 5</div>
+                <div class="numbertext">4 / 7</div>
                 <img src="Img_Docking Boat.png" style="width:100%">
                 <div class="text">Docking Boat</div>
             </div>
   
             <div class="mySlides fade">
-                <div class="numbertext">3 / 5</div>
+                <div class="numbertext">5 / 7</div>
                 <img src="Img_Section view.png" style="width:100%">
                 <div class="text">Section View</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">4 / 5</div>
+                <div class="numbertext">6 / 7</div>
                 <img src="Img_Section View isometric.png" style="width:100%">
                 <div class="text">Section View isometric</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">5 / 5</div>
+                <div class="numbertext">7 / 7</div>
                 <img src="Img_Top view.png" style="width:100%">
                 <div class="text">Top View</div>
             </div>
@@ -95,6 +106,8 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
         </div>
     </section>
 
@@ -129,5 +142,6 @@
         <p class="footer_text">by Harry Collicutt, Ismael Pazmiño, Rikke Geelen, Suwanna Truss  </p>
     </footer>
     </main>
+    <script src="app.js"></script>
 </body>
 </html>
